added user logged in localStorage; added validation in value less than zero

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,6 +20,7 @@
     "paymentAddedSuccess": "Payment registered successfully!",
     "paymentDeletedSuccess": "Payment successfully removed!",
     "pleaseFillInFields": "Please fill in all fields!",
+    "valueLessThanZero": "The value must be greater than zero!",
     "advancedFilter": "Advanced filter",
     "applyFilters": "Apply filters",
     "edit": "Edit",
